# omni-infer

./: .gitignore  CONTRIBUTION.md  LICENSE  MANIFEST.in  README.md  README_en.md  ROADMAP.md  build.sh  config  nginx.conf  ngx_http_omni_proxy_module.c  omni_apc.c  omni_apc.h  omni_metrics.c  omni_metrics.h  omni_pd_body_rewrite.c  omni_pd_body_rewrite.h  omni_proxy.h  omni_proxy.sh  omni_radix_tree.c  omni_radix_tree.h  omni_scheduler.c  omni_scheduler.h  omni_shared_state.h  omni_tokenizer.c  omni_tokenizer.py  omni_utils.h  omni_zmq_handler.c  pyproject.toml  setup.py
.gitee/: ISSUE_TEMPLATE.zh-CN.md  PULL_REQUEST_TEMPLATE.zh-CN.md
.gitee/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  RFC.zh-CN.md  bug-report.zh-CN.md  bug.yml  config.yml  feature.yml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: add_custom_model.md  model_config_loader_usage.md  omni_cli_usage.md  omni_infer_installation_guide.md  omni_infer_optimization_tuning_config.md  omni_infer_quick_start.md  omni_infer_quick_start_qwq.md  omni_proxy_batch_scheduler.md
infer_engines/: bash_install_code.sh  bash_install_code_optimization.sh  bash_install_code_v0.8.3.sh  bash_install_mock.sh  bash_install_mock_no_npus.sh  bash_install_sglang.sh
modules/: ngx_http_omni_proxy_module.c  omni_metrics.c  omni_metrics.h  omni_pd_body_rewrite.c  omni_pd_body_rewrite.h  omni_radix_tree.c  omni_radix_tree.h  omni_utils.c
omni/accelerators/placement/omni_placement/cpp/test/: CMakeLists.txt  test_distribution.cpp  test_dynamic_eplb_greedy.cpp  test_expert_activation.cpp  test_expert_load_balancer.cpp  test_expert_mapping_per_redundancy.cpp  test_main.cpp  test_moe_weights.cpp  test_placement_manager.cpp  test_placement_mapping.cpp  test_placement_optimizer.cpp  test_tensor.cpp
tests/: README.md  conftest.py  env.sh  install.sh  install_and_run_tests.sh  log_utils.sh  mark_utils.py  reduce_the_num_of_hidden_layers_of_deepseek_v3_w8a8.patch  requirements-ci.txt  requirements.txt  run_ut_test.sh  start_tests.sh
tools/: pyproject.toml  requirements.txt
tools/ansible/: omni_infer_server_used_for_CI.yml  omni_infer_server_used_for_long_term_test.yml
tools/ansible/template/: README.md  omni_infer_inventory_used_for_1P1D.yml  omni_infer_inventory_used_for_1P32_1D32.yml  omni_infer_inventory_used_for_2P1D.yml  omni_infer_inventory_used_for_2P2D.yml  omni_infer_inventory_used_for_4P1D.yml  omni_infer_inventory_used_for_qwq_3P1D.yml  omni_infer_server_add_node_template.yml  omni_infer_server_template.yml  omni_infer_server_template_2K.yml  omni_infer_server_template_50K.yml  omni_infer_server_template_a3_1machine2p.yml  omni_infer_server_template_a3_ds.yml  omni_infer_server_template_a3_dsv32_for_int8.yml  omni_infer_server_template_elastic.yml  omni_infer_server_template_k2.yml  omni_infer_server_template_pangu_ultra_moe.yml  omni_infer_server_template_qwq.yml
tools/ansible/template/sglang/: omni_infer_inventory_used_for_2P1D.yml  omni_infer_inventory_used_for_4P1D.yml  omni_infer_server_template_2P1D.yml  omni_infer_server_template_4P1D.yml  omni_infer_server_template_4P1D_graph.yml  omni_infer_server_template_4P1D_graph_mtp.yml
tools/benchmark_test/: README.md
tools/benchmark_test/benchmark/: benchmark_baseline_test.sh  providers.yaml
tools/benchmark_test/benchmark_tools/: benchmark.py  benchmark_climbing.py  benchmark_parallel.py  benchmark_serving.py  benchmark_utils.py  extract_dataset.py  generate_dataset.py  offline_profile.py  providers.yaml  requirements.txt  speculative_benchmark_parallel.py
tools/benchmark_test/benchmark_tools/built_in_dataset/: 128.json
tools/benchmark_test/benchmark_tools/modal_benchmark/: modal_benchmark_parallel.py  utils.py
tools/benchmark_test/benchmark_tools/multilora_bechmark/: .gitignore  README.md  multilora_inference.py  no_lora.py
tools/benchmark_test/benchmark_tools/multilora_bechmark/config/: adapters.json  common.json  prompts.json
tools/docker/: Dockerfile.base  Dockerfile.omniinfer  Dockerfile.vllm-omni.source  build_whl.sh  docker_build_run.sh  install_python.sh  openEuler.repo  start_server.sh
tools/docker/requirements/: develop.txt
tools/omni_cli/: config_transform.py  generate_ranktable.yml  main.py  mk_inventory_yml.py  omni_cfg.py  omni_infer_deployment.json  omni_inspect.py  omni_run.py  proxy.py
tools/omni_cli/ansible/: omni_cli_server.yml  proxy.yml
tools/omni_cli/configs/: default_prifiles.yml  default_profiles.yml  default_qwen_profiles.yml  generate_ranktable.yml  serving_profiles.yml  sync_code.yml
tools/omni_cli/configs/qwen/: qwen_2node.yml
tools/omni_cli/template/: cli_ds_r1_w4a8c16_a2_2p1d.yaml  cli_ds_r1_w8a8c16_a2_1p1d_400tps.yaml  cli_ds_r1_w8a8c16_a2_1p1d_720tps.yaml  cli_ds_r1_w8a8c16_a3_18p1d.yaml  cli_ds_r1_w8a8c16_a3_1p1d.yaml  cli_ds_r1_w8a8c16_a3_2p1d.yaml  cli_ds_r1_w8a8c16_a3_5p1d.yaml  cli_kimi_k2_w4a8c16_a3_2p1d.yaml  cli_pangu_718b_w4a8c16_a3_18p1d.yaml  cli_pangu_718b_w4a8c16_a3_4p1d.yaml  cli_qwen3_235b_w8a8c16_a3_2p1d.yaml  cli_qwen3_32b_bf16_a3_3p1d.yaml  cli_qwq_32b_bf16_a2_3p1d.yaml  cli_qwq_32b_bf16_a2_3p1d.yml  cli_qwq_32b_bf16_a3_3p1d.yaml
tools/quant/: README.md  fp8_cast_bf16.py  quant_deepseek_kimi2.py  quant_gptoss.py  quant_qwen.py
tools/quant/python/optiquant/: faquant.py  gpt_oss_int8.py  int4.py  int8.py
tools/scripts/: README.md  ascend_kimi_k2_tool_parser.py  bind_cpu.sh  global_proxy.sh  logging_config.json  omni_proxy.sh  pd_ranktable_tools.py  pd_run.sh  pd_run_pangu.sh  pd_run_pangu_ultra_moe.sh  process_nz_config.py  run_model_qwen.py  run_model_qwen.sh  run_offline_multimodal.py  start_api_servers.py  start_api_servers_sgl.py  test_start_api_servers_pangu.sh  test_start_api_servers_qwen.sh
tools/scripts/quant/: quant_deepseek_kimi2.py
tools/scripts/ray_log_rotate/: ray-others.conf  raylet-gcs.conf  set_logrotate_cron.sh  start_ray_logrotate.sh
tools/speculative_train/: get_hidden_states.py  merge_files.py  merge_tokens.py  qwen2_ealge.py
tools/speculative_train/models/: auto.py
tools/speculative_train/models/draft/: qwen2_ealge.py
tools/speculative_train/tools/: get_hidden_states.py
(+965 files in other folders)
