[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni_infer"
version = "0.1.0"
description = "Omni Infer"
authors = [
    { name="Huawei" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "chardet",
]

[project.entry-points."vllm.platform_plugins"]
npu = "omni.adaptors.vllm.platform:register"

[project.entry-points."vllm.general_plugins"]
npu_optimized_models = "omni.models:register_model"
kv_connectors = "omni.accelerators.pd:register"

[tool.setuptools.packages.find]
include = ["omni*"]